[*] Swagger update: country api methods, additional relation fields for event and country
